# aluminum

./: .gitignore  Cargo.toml  README.md  interaction.org  plan.org  rustfmt.toml  simple.rs
libchatty/: Cargo.toml
libchatty/src/: .#noise_session.rs  asymmetric_codec.rs  base64_codec.rs  identity.rs  lib.rs  messaging.rs  mime.rs  noise_codec.rs  noise_session.rs  noise_transport.rs  quinn_session.rs  system.rs  utils.rs
p2p-chat/: Cargo.toml  kowalski.usr  kowalsky.db  kowalsky.usr  sajmon.usr  todo.org
p2p-chat/src/: .#messageview.rs  action.rs  component.rs  connmanager.rs  controller.rs  eventmanager.rs  friendsview.rs  main.rs  message.rs  messagerepl.rs  messageview.rs  peermanager.rs  spawner.rs  tui.rs  ui.rs
p2p-relay/: Cargo.toml
p2p-relay/src/: main.rs
