[package]
name = "libchatty"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
tokio-utp = "0.3.0"
futures = "0.3"
snow = "0.9.6"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
curve25519-dalek = "4"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8.5"
dirs = "5"
sha2 = "0.10"
base64 = "0.22.1"
toml = "0.8.19"
