[package]
name = "libchatty"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec", "io"] }
bytes = "1"
tokio-utp = "0.3.0"
futures = "0.3"
snow = "0.9.6"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
curve25519-dalek = "4"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8.5"
dirs = "5"
sha2 = "0.10"
base64 = "0.22.1"
toml = "0.8.19"

quinn = "0.11.3"
rustls = { version = "0.23.12", features = ["ring"] }
rcgen = "0.13.1"
tracing = "0.1.40"
chrono = { version = "0.4.38", features = ["serde"] }
enum-as-inner = "0.6.1"
anyhow = "1.0.91"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
pin-project = "1.1.7"
infer = "0.16.0"
mime = "0.3.17"
